--- a/covid.html
+++ b/covid.html
@@ -1,1 +1,14 @@
-<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="PANAMA COVID-19" src="//www.arcgis.com/apps/Embed/index.html?webmap=825606b0c1264633bcfdf39e88f5cf8c&extent=-79.5401,9.0561,-79.341,9.1283&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe></div>
+<html lang="en"></html>
+<head>
+  <title>Provincias de Panama COVID-19 Casos por Ahmed Rangel</title>
+  <link rel="icon" href="/images/logomt.jpg"/>
+  <link rel="shortcut icon" href="/images/logomt.jpg"/>
+  <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/css/fontello-embedded.css">
+  <link rel="stylesheet" href="/css/bayza.css"/>
+  <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+  <link rel="canonical" href="https://bayzamusic.com/"/>
+</head>
+<body>
+  <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="PANAMA COVID-19" src="//www.arcgis.com/apps/Embed/index.html?webmap=825606b0c1264633bcfdf39e88f5cf8c&extent=-79.5401,9.0561,-79.341,9.1283&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=dark"></iframe></div>
+</body>
